src/test/ui/estr-subtyping.stderr
error[E0308]: mismatched types
  --> $DIR/estr-subtyping.rs:10:15
   |
LL |    wants_uniq(x);
   |               ^- help: try using a conversion method: `.to_string()`
   |               |
   |               expected struct `String`, found `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
